# credential-exchange

./: .cspell.json  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/: CODEOWNERS  renovate.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: lint.yml  publish.yml  release.yml  scan.yml  test.yml  version-bump.yml
credential-exchange/: Cargo.toml  README.md
credential-exchange-format/: CHANGELOG.md  Cargo.toml  README.md
credential-exchange-format/src/: b64url.rs  credential_scope.rs  document.rs  editable_field.rs  extensions.rs  identity.rs  lib.rs  login.rs  passkey.rs  timestamp.rs
credential-exchange-format/src/extensions/: shared.rs
credential-exchange-protocol/: Cargo.toml  README.md
credential-exchange-protocol/src/: lib.rs
credential-exchange-types/: Cargo.toml  README.md
credential-exchange-types/src/: b64url.rs  format.rs  lib.rs  passkey.rs  protocol.rs
credential-exchange-types/src/format/: document.rs  editable_field.rs  identity.rs  login.rs  passkey.rs
