[workspace]
resolver = "2"
members = [
    "credential-exchange-format",
    "credential-exchange-protocol",
    "credential-exchange",
]

[workspace.package]
authors = ["Bitwarden Inc"]
edition = "2021"
# Note: Changing rust-version should be considered a breaking change
rust-version = "1.75"
homepage = "https://bitwarden.com"
repository = "https://github.com/bitwarden/credential-exchange"
license-file = "LICENSE"
keywords = ["credential-exchange", "encoding"]
