[package]
name = "credential-exchange-format"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
chrono = { version = "0.4", features = [
    "serde",
    "std",
], default-features = false }
data-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
