[package]
name = "credential-exchange-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "=1.0.210", features = ["derive"] }
data-encoding = "=2.6.0"
