[package]
name = "credential-exchange-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
data-encoding = "2"
jose-jwk = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
