[package]
name = "credential-exchange"
description = "Placeholder for high level credential exchange functionality"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
